force-app/main/default/objects/Service_Provider__mdt/fields/Provider_Field__c.field-meta.xml
<CustomField>
    <fullName>Provider_Field__c</fullName>
    <label>Provider Field</label>
    <metadataRelationshipControllingField>Service_Provider__mdt.Object_Type__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Service_Providers</relationshipLabel>
    <relationshipName>Service_Providers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>