force-app/main/default/objects/Service_Provider__mdt/fields/Provider_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Provider_Owner_Email__c</fullName>
    <label>Provider Owner Email</label>
    <type>Email</type>
</CustomField>